Configuracion de Firebase y Servicio de Carga

--- a/angular.json
+++ b/angular.json
@@ -117,6 +117,10 @@
               "devServerTarget": "fotosApp:serve:production"
             }
           }
+        },
+        "deploy": {
+          "builder": "@angular/fire:deploy",
+          "options": {}
         }
       }
     }
